# PaperGenie

./: .gitignore  chat_history.json  chat_summary.txt  codetest.py  papergenie.md  pyproject.toml
core/: agent.py  interfaces.py  models.py
modules/: visualization.py
modules/file_processor/: processor.py
modules/outline/: file_processor.py  generator.py  outline_generator.py
modules/research/: downloader.py  scholar.py
pipeline/: OutlineGeneration.py
utils/: logger.py
