[project]
name = "papergenie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "autogen-agentchat[long-context,retrievechat]~=0.2",
    "docling>=1.20.0",
    "flaml[automl]>=2.3.2",
    "instructor>=1.6.3",
    "litellm>=1.51.3",
    "pymupdf>=1.24.13",
]
